--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,1 +1,14 @@
 /* All styles for your Card Components live here */
+
+.banner{
+    border: 4px solid red;
+    width: 60%;
+}
+.card-link{
+    color: grey;
+}
+.card-container{
+    border: 1px solid green;
+    padding: 10px;
+    text-align: center;
+}
