finished styling header and card containers

--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -2,4 +2,16 @@
 .header-container{
     border: 1px solid blue;
     display: flex;
+    justify-content: space-around;
+    padding: 10px;
+}
+.header-item{
+    /* border: 1px solid orange; */
+    width: 80%;
+}
+.header-image{
+    /* border: 1px solid red; */
+}
+.header-title{
+    font-size: 25px;
 }
