--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,14 +1,26 @@
 /* All styles for your Card Components live here */
 
 .banner{
-    border: 4px solid red;
-    width: 60%;
+    /* border: 4px solid red; */
+    width: 80%;
 }
 .card-link{
     color: grey;
+    text-decoration: none;
 }
 .card-container{
     border: 1px solid green;
     padding: 10px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card-div{
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 10px;
+    width: 78%;
+}
+.card-title{
+    font-size: 25px;
 }
