--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -3,13 +3,14 @@
 .banner{
     /* border: 4px solid red; */
     width: 80%;
+    border-radius: 6px;
 }
 .card-link{
     color: grey;
     text-decoration: none;
 }
 .card-container{
-    border: 1px solid green;
+    border: 1px solid rgb(128, 115, 0);
     padding: 10px;
     display: flex;
     flex-direction: column;
