basic design done

--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -1,4 +1,5 @@
 .CalculatorDisplay{
-    background-color: black;
+    background-color: rgb(42, 41, 49);
     color: white;
+    text-align: end;
 }
