--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,12 +1,11 @@
 .ButtonComponent__NumberButtons{
-    padding: 10px;
-    border: 1px solid grey;
+    border-top: 1px solid grey;
     display: flex;
     width:75%;
     flex-wrap: wrap;
 }
 .ButtonComponent__NumberButtons p{
-    border: 1px solid black;
+    border: 1px solid grey;
     width:33%;
     font-size: 40px;
     text-align: center;
