--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,29 +1,32 @@
 .ButtonComponent__NumberButtons{
-    border-top: 1px solid grey;
-    display: flex;
-    width:75%;
-    flex-wrap: wrap;
+    border: 1px solid grey;
+  /* border: 2px solid red; */
+    width:25%;
 }
 .ButtonComponent__NumberButtons p{
-    border: 1px solid grey;
-    width:33%;
-    font-size: 40px;
-    text-align: center;
+    width:100%;
+    font-size: 45px;
+    display: flex;
+    justify-content: center;
 }
-.ButtonComponent__NumberButtons p.NumberButtons__stretch{
-    width: 100%;
-}
-
 .ButtonComponent__ActionButtons{
+    padding: 10px;
     border: 1px solid grey;
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 21%;
+    background-color: rgb(167, 46, 24);
+
 }
 .ButtonComponent__ActionButtons p{
-    border: 1px solid grey;
     font-size: 40px;
     text-align: center;
     color: white;
-    background-color: rgb(167, 46, 24);
+    width:100%;
 }
+
+.ButtonComponent__NumberButtons:nth-child(1){
+    width: 75.5%;
+}
+.ButtonComponent__NumberButtons:nth-child(15){
+    width: 75.5%;}
